delete, edit bookings

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/BookingCreate.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/BookingCreate.razor
@@ -28,7 +28,7 @@
     private async void AddBooking()
     {
         Api.AddBooking(_booking);
-        //await .InvokeAsync(_location);
+        await OnBookingsChanged.InvokeAsync(_booking);
     }
 
 }
